<resources>

    <string name="app_name">MoireCreator</string>
    <string name="title_activity_main">Moire</string>
    <string name="select_type_text">Moire Type</string>
    <string name="type_title">Type</string>
    <string name="color_title">Color</string>
    <string name="select_type">select</string>
    <string name="line_a">Line A</string>
    <string name="line_b">Line B</string>
    <string name="bg_color">Background</string>
    <string name="button_text_select_color">select</string>

    <string name="number_title">Number</string>
    <string name="thick_title">Thick</string>
    <string name="slope_title">Slope</string>
    <string name="line_a_val_text">Line A : %d</string>
    <string name="line_b_val_text">Line B : %d</string>

    <string name="bt_ok">OK</string>
    <string name="splash">splash_image</string>
    <string name="red">Red\u0020\u0020\u0020</string>
    <string name="green">Green\u0020</string>
    <string name="blue">Blue\u0020\u0020</string>
    <string name="pre_view">Pre View</string>
    <string name="color">- Color -</string>

    <string name="setting">setting</string>
    <string name="about">about</string>
    <string name="other">other</string>

    <string name="message_capture_success">successful in capture!</string>
    <string name="message_capture_failed">failed to capture</string>

    <string-array name="type_items">
        <item>Line</item>
        <item>Circle</item>
        <item>Rect</item>
        <item>Heart</item>
        <item>Synapse</item>
        <item>Original</item>
        <item>Octagon</item>
        <item>Flower</item>
    </string-array>

    <string-array name="other_items">
        <item>privacy policy</item>
        <item>license</item>
        <item>version</item>
    </string-array>

</resources>