<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_ll"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="horizontal"
        android:layout_marginTop="20dp" >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:textSize="18sp"
            android:textColor="#000000"
            android:text="@string/red" />
        <SeekBar
            android:id="@+id/seekBar_red"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="horizontal"
        android:layout_marginTop="10dp" >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:textSize="18sp"
            android:textColor="#000000"
            android:text="@string/green" />
        <SeekBar
            android:id="@+id/seekBar_green"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="horizontal"
        android:layout_marginTop="10dp" >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:textSize="18sp"
            android:textColor="#000000"
            android:text="@string/blue" />
        <SeekBar
            android:id="@+id/seekBar_blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="horizontal"
        android:layout_marginTop="20dp" >
        <TextView
            android:id="@+id/pre_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:text="@string/pre_view" />
    </LinearLayout>

</LinearLayout>