<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <!-- ToolBar -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/preference_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary">
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/parent_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/preference_tool_bar">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <!-- Type -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/type_title"
                style="@style/settings_normal_text_style"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/settings_text_black"/>
            <Spinner
                android:id="@+id/type_spinner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sppiner_height"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/select_type"
                android:entries="@array/type_items"
                style="@style/MySpinnerThem"/>

            <!-- Color -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/color_title"
                style="@style/settings_normal_text_style"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/settings_text_black"
                android:layout_marginBottom="5dp"/>
            <!-- Color A -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <Button
                    android:id="@+id/line_a_color_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/button_text_select_color" />
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_toLeftOf="@id/line_a_color_button"
                    android:layout_marginRight="5dp">
                    <TextView
                        android:id="@+id/line_a_color_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/line_a"
                        android:textSize="18sp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:id="@+id/line_a_pre_color"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>
            </RelativeLayout>

            <!-- Color B -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal" >
                <Button
                    android:id="@+id/line_b_color_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/button_text_select_color" />
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_toLeftOf="@id/line_b_color_button"
                    android:layout_marginRight="5dp">
                    <TextView
                        android:id="@+id/line_b_color_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/line_b"
                        android:textSize="18sp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:id="@+id/line_b_pre_color"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>
            </RelativeLayout>

            <!-- Color Background -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <Button
                    android:id="@+id/bg_color_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/button_text_select_color" />
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_toLeftOf="@id/bg_color_button"
                    android:layout_marginRight="5dp">
                    <TextView
                        android:id="@+id/bg_color_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bg_color"
                        android:textSize="18sp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:id="@+id/bg_pre_color"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>
            </RelativeLayout>

            <!-- Number -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/number_title"
                style="@style/settings_normal_text_style"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/settings_text_black"/>
            <!-- Number A -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/padding_medium"
                android:orientation="vertical" >
                <TextView
                    android:id="@+id/number_a_seekBar_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/line_a_val_text"
                    android:textColor="#000"
                    android:textSize="18sp" />
                <SeekBar
                    android:id="@+id/number_a_seekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="40"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp" />
            </LinearLayout>
            <!-- Number B -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >
                <TextView
                    android:id="@+id/number_b_seekBar_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/line_b_val_text"
                    android:textColor="#000"
                    android:textSize="18sp" />
                <SeekBar
                    android:id="@+id/number_b_seekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="40"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp" />
            </LinearLayout>

            <!-- Thick -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/thick_title"
                style="@style/settings_normal_text_style"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/settings_text_black"/>

            <!-- Thick A -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/padding_medium"
                android:orientation="vertical" >
                <TextView
                    android:id="@+id/thick_a_seekBar_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/line_a_val_text"
                    android:textColor="#000"
                    android:textSize="18sp" />
                <SeekBar
                    android:id="@+id/thick_a_seekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="20"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp" />
            </LinearLayout>
            <!-- Thick B -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >
                <TextView
                    android:id="@+id/thick_b_seekBar_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/line_b_val_text"
                    android:textColor="#000"
                    android:textSize="18sp" />
                <SeekBar
                    android:id="@+id/thick_b_seekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="20"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp" />
            </LinearLayout>
            <!-- Slope -->
            <LinearLayout
                android:id="@+id/slope_layout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/slope_title"
                    style="@style/settings_normal_text_style"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/settings_text_black"/>
                <!-- Slope A -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/padding_medium"
                    android:orientation="vertical" >
                    <TextView
                        android:id="@+id/slope_a_seekBar_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/line_a_val_text"
                        android:textColor="#000"
                        android:textSize="18sp" />
                    <SeekBar
                        android:id="@+id/slope_a_seekBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:max="150"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp" />
                </LinearLayout>
                <!-- Slope B -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/slope_b_seekBar_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/line_b_val_text"
                        android:textColor="#000"
                        android:textSize="18sp" />
                    <SeekBar
                        android:id="@+id/slope_b_seekBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:max="150"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp" />
                </LinearLayout>
            </LinearLayout>

            <!-- dummy view for margin -->
            <View
                android:layout_width="match_parent"
                android:layout_height="80dp"/>

        </LinearLayout>
    </ScrollView>
    <!-- AD -->
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ad_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adUnitId="@string/ad_unit_id"
        ads:adSize="BANNER"/>
</RelativeLayout>